tests/type_errors/list_concat_option_int.nos
# expect_error: type mismatch
# List[Option[Int]] ++ List[Int] is a type error
main() = [Some(1), Some(2)] ++ [3, 4]
